examples/errors/part2_semantic1_binary_operator_invalid2.lya
dcl a int = 2; // Ok
dcl b char = 'h'; // Ok
dcl c int = a+3; // Ok
dcl d int = a+b; // Error. int + char